Corrected text colour for contrast on button

--- a/assets/theme-light.scss
+++ b/assets/theme-light.scss
@@ -221,11 +221,11 @@ $footer-fg:                   $nhs-Pink;
 
 .btn {
   background-color: $nhs-BrightBlue;
-  color: $nhs-PaleGrey;
+  color: white;
 }
 
 .btn:hover {
       background-color: $nhs-LightBlue;
       transition: 0.7s;
-      color: $nhs-PaleGrey;
+      color: white;
   }
